[DDW-355] Fix alignment

--- a/source/renderer/app/components/staking/stake-pools/StakePoolsList.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsList.scss
@@ -10,10 +10,11 @@
   display: flex;
   flex: 1;
   justify-content: center;
+  min-height: 44px;
 
   :global {
     .LoadingSpinner_component {
-      margin: -44px 0 0 0;
+      margin: 0;
     }
   }
 }
